<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NeuralTheraputic</string>
    <string name="action_settings">Settings</string>
    <string name="bar">Bar</string>
    <string name="base_color">Base Color</string>
    <string name="bluetooth_not_enable">Bluetooth was not enabled. </string>
     <string name="button_scan">Scan for devices</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth device list.</string>
    <string name="boundary_mode">Boundary mode</string>
    <string name="boundary_mode_range">Boundary Mode Range</string>
    <string name="cancel">Cancel</string>
    <string name="choose_prompt">Choose Display Mode</string>
    <string name="constant">Constant</string>
    <string name="constant_traget_value">Constant Traget Value</string>
    <string name="current_device">Current Device:</string>
    <string name="device">Device</string>
    <string name="device_settings">Device</string>
    <string name="display_mode">Displaymode</string>
    <string name="emg_offset">EMG Offset</string>
    <string name="emg_scale">EMG Scale(mV/Sec)</string>
    <string name="exit_message">Would you like to exit the Application?</string>
    <string name="exit_title">Exit the App?</string>
    <string name="fourhundrad">25</string>
    <string name="five">5</string>
    <string name="freeze">Freeze</string>
    <string name="graph">Graph</string>
    <string name="graph_style">Graph Style</string>
    <string name="graph_settings">Graph</string>
    <string name="grid">Grid</string>
    <string name="grid_color">Grid Color</string>
    <string name="hello_world">Hello world!</string>
    <string name="hundrad">100</string>
    <string name="linear">Linear</string>
    <string name="media_settings">Media</string>
    <string name="mute">Mute</string>
    <string name="none">None</string>
    <string name="neural_therapeutics">Neural Therapeutics</string>
    <string name="ok">OK</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="paired_connected">Paired and connected</string>
    <string name="paired_not_connected">Paired but not connected</string>
    <string name="paired_only">Paired but not in-use</string>
    <string name="plus">+</string>
    <string name="predrawn">Predrawn</string>
    <string name="rehab_settings">Rehab</string>
    <string name="scan">Scan</string>
    <string name="select_device">select a device to connect</string>
    <string name="sensor_settings">Sensor</string>
    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="traget_mode">Traget Mode</string>
    <string name="time_base">Time Base(sec)</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="thirty">30</string>
    <string name="video">Video</string>
    <string name="v_graph">Video and Graph</string>
    <string name="video_zoom">Video Zoom</string>
      <!-- The messsage shown when video record reaches size limit. -->
    <string name="video_reach_size_limit">Size limit reached.</string>
    <string name="volume">Volume</string>
    <string name="zero">0</string>
    <string name="none_paired">No paired devices</string>
    <string name="none_found">None Found</string>
     <string name="predrawn_clear">Predrawn\n clear</string>
    <string name="unpaired">Newly discovered</string>
    <string name="confirm_connect">Connect to Device</string>
    <string name="confirm_disconnect">Disconnect device</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="connecting">Connecting to </string>
    <string name="connect_title">NT Sensor Device</string>
    <string name="no_matching_device">WARNING: No matching device name for Shimmer sensor</string>
    <string name="device_disconnected">Device disconnected </string>
    <string name="left_bicep">Left Bicep</string>
    <string name="left_tricep">Left Tricep</string>
    <string name="right_bicep">Right Bicep</string>
    <string name="right_tricep">Right Tricep</string>
    <string name="resume_graph">Resume</string>
    <string name="demo_mode">Demo Data</string>
    <string name="demo_mode_on">Demo On</string>
    <string name="demo_mode_off">Demo Off</string>
    <string name="time_base_info">Time Base</string>
    <string name="emg_scale_info">Emg Scale</string>
    <string name="pre_drawn_complete">Predrawn\n complete</string>
    <string name="Games">Finger Game</string>
    <string name="Ballon_Games">Ballon Game</string>
    <string name="Reports">Reports</string>
    
    <string name="name_with_colon">Name:</string>
    <string name="tags_with_colon">Tags:</string>
    <string name="sign_in">Sign In</string>
    <string name="logout">Log Out</string>
    <string name="please_wait">Please wait…</string>
    <string name="user_log_out_msg">User successfully logout!</string>
    <string name="user_successfully_sign_in">User was successfully sign in!</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="web_site">Web Site</string>
    <string name="three_dots">…</string>
    <string name="tags">Tags</string>
    
    <string name="select_callee">Select Therapist</string>
    
    <string name="UserName">Username</string>
    <string name="CalleeName">Calleename</string>
    <string name="no_user_loggedin">No User LoggedIn</string>
    <string name="no_callee_Selected">No Callee Selected</string>
    <string name="set_callee_user">Set Me As Therapist</string>
    <string name="login_error">Error when login, check test users login and password</string>
    <string name="error_login">Error when login</string>
    <string name="reject_by_user">Rejected by user</string>
    <string name="user_not_answer">User did not answer</string>
    <string name="calling_dialog_title">Incoming call</string>
    <string name="calling_dialog_txt">Calling</string>
    <string name="Select_non_logged">Please select the non logged In User</string>
    
    <string name="ON_CALL_START">On Call Start</string>
    <string name="ON_CANCELED_CALL">On Canceled Call</string>
    <string name="ON_CALL_END">On Call End</string>
    <string name="ACCEPT">On Call Accept</string>
    <string name="ON_CONNECTED">On Connected</string>
    <string name="ON_START_CONNECTING">On Start Connecting</string>
    <string name="ON_ACCEPT_BY_USER">On Accept By User</string>
    
    <string name="Top_score">Top Score :%s</string>
    <string name="Current_score">Current Score:%s</string>
       
</resources>
