<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_color" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
         >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="40dp"
                   android:layout_centerInParent="true"
            android:layout_marginBottom="40dp" >

            <TableRow android:layout_margin="20dp"
                
                 >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/volume"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/setting_page_text_size" />

                <SeekBar
                    android:id="@+id/volumeseek"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:background="@color/blue_enable"
                    android:max="100"
                    android:maxHeight="3dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:progress="40"
                    android:thumb="@xml/thumb" />
            </TableRow>

            <TableRow android:layout_margin="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mute"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/setting_page_text_size" />

                <Switch
                    android:id="@+id/mute_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="30dp"
                    android:checked="false"
                    android:gravity="center"
                    android:switchTextAppearance="@style/SwitchTextAppearance"
                    android:textOff="@string/off"
                    android:textOn="@string/on"
                    android:thumb="@drawable/switch_thumb"
                    android:track="@drawable/switch_bg" />
            </TableRow>

            <TableRow android:layout_margin="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/video_zoom"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/setting_page_text_size" />

                <SeekBar
                    android:id="@+id/videozoomSeek"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:background="@color/blue_enable"
                    android:max="30"
                    android:maxHeight="3dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:progress="10"
                    android:thumb="@xml/thumb" />
            </TableRow>

            <TableRow android:layout_margin="20dp" >

                <Button
                    android:id="@+id/btn_selectcallee"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/button_ag_blue_sharpedge"
                    android:padding="20dp"
                    android:text="@string/select_callee"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/setting_page_text_size" />

                <ToggleButton
                    android:id="@+id/btn_login"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/button_ag_blue_sharpedge"
                    android:padding="20dp"
                    android:textColor="@android:color/white"
                    android:textOff="@string/logout"
                    android:textOn="@string/login"
                    android:textSize="@dimen/setting_page_text_size" />
            </TableRow>

            <TableRow android:layout_margin="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/UserName"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/setting_page_text_size" />

                <TextView
                    android:id="@+id/txt_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/setting_page_text_size" />
            </TableRow>

            <TableRow android:layout_marginLeft="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/CalleeName"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/setting_page_text_size" />

                <TextView
                    android:id="@+id/txt_calleeusername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/setting_page_text_size" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>

</ScrollView>